// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegendItem:  should render 1`] = `
<a
  className="LegendItem enabled hasChildren hovered otherHovered"
  onClick={[MockFunction]}
  title="View name"
>
  <span
    className="Color"
    style={
      Object {
        "backgroundColor": "#000",
      }
    }
  />
  <span
    className="Name"
  >
    name
    <ChevronRight />
  </span>
  <span
    className="Count"
  >
    2
  </span>
</a>
`;

exports[`LegendItem:  should render breadcrumb 1`] = `
<a
  className="LegendItem enabled hasChildren breadcrumb hovered otherHovered"
  onClick={[MockFunction]}
  title="View name"
>
  <span
    className="Color"
    style={
      Object {
        "backgroundColor": "#000",
      }
    }
  />
  <ChevronLeft
    className="BreadcrumbIcon"
  />
  <span
    className="Name"
  >
    name
    <ChevronRight />
  </span>
  <span
    className="Count"
  >
    2
  </span>
</a>
`;
